Changelog for Shake

    Improve the documentation of getDirectoryContents
0.16.2, released 2018-02-13
    Set the correct lower bound on unordered-containers of 0.2.7
0.16.1, released 2018-02-11
    Support process-1.6.3.0
    #290, add withTempFileInside and withTempDirInside
    #549, Semigroup-Monoid proposal support
    Hadrian-462, fail gracefully if on-disk formats change
    #469, only print timing information at normal verbosity or above
    #340, add runAfter
    #372, deprecate askOracleWith
    #520, only record each dependency once
    #548, rebuild the Ninja files, if they change, restart
    #547, make Ninja --lint checking see through phonys
    #546, support Ninja line continuations in more places
    #470, make --verbose and --quiet help text clearer
    #534, make writeFile' and writeFileChanged create the directory
    #543, add resultHasChanged to track results which have changed
    Add getShakeExtraRules, like getShakeOptionsRules for shakeExtra
    #535, add shakeArgsOptionsWith to manipulate ShakeOptions
    #538, make sure processes can be killed properly
    #502, add needHasChanged to track what in a need has changed
    Weaken the typeclasses required for apply/apply1
    #502, add batch function to batch commands with high startup
    Avoid parallel duplicating local state such as discounting
    Prefer to resume tasks rather than start new ones
0.16, released 2017-09-20
    #536, make --skip work for oracles
    Ensure shakeOutput is used more consistently
    #49, add shakeColor and --color flags
    #490, recommend -threaded as standard
    #517, ignore ./ in FilePattern
    Require extra-1.5.3
    #499, add a filePattern function, like ?== but with the matches
    #474, never spawn user actions unmasked
    Allow user arguments to replace builtin arguments
    #522, make copyFile create directories if necessary
    #516, add an example for withTempDir
    #514, expose more about cmd arguments