@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #565, deal with multi-file rules that don't create their contents
     Improve the documentation of getDirectoryContents
 0.16.2, released 2018-02-13
     Set the correct lower bound on unordered-containers of 0.2.7
